Added simgear/sky/clouds3d to the build system.

--- a/configure.ac
+++ b/configure.ac
@@ -371,6 +371,7 @@ AC_CONFIG_FILES([ \
 	simgear/screen/Makefile \
 	simgear/serial/Makefile \
 	simgear/sky/Makefile \
+	simgear/sky/clouds3d/Makefile \
 	simgear/threads/Makefile \
 	simgear/timing/Makefile \
 	simgear/xgl/Makefile \
