--- a/simgear/scene/sky/clouds3d/Makefile.am
+++ b/simgear/scene/sky/clouds3d/Makefile.am
@@ -16,7 +16,7 @@ include_HEADERS = \
 	SkyUtil.hpp
 
 libsgclouds3d_a_SOURCES = \
-        $(EXTRA_SOURCE) \
+        $(EXTGL_SOURCE) \
 	vec3fv.cpp \
 	mat16fv.cpp \
 	tri.cpp \
