Fixes for 0.3.1 release.

--- a/simgear/scene/sky/clouds3d/Makefile.am
+++ b/simgear/scene/sky/clouds3d/Makefile.am
@@ -17,26 +17,37 @@ include_HEADERS = \
 
 libsgclouds3d_a_SOURCES = \
         $(EXTGL_SOURCE) \
-	vec3fv.cpp \
-	mat16fv.cpp \
-	tri.cpp \
-	plane.cpp \
-	camera.cpp \
-	camutils.cpp \
-	minmaxbox.cpp \
-	SkyMinMaxBox.cpp \
-	SkyLight.cpp \
-	SkyMaterial.cpp \
-	SkyTextureManager.cpp \
-	SkyTextureState.cpp \
-	SkyDynamicTextureManager.cpp \
-	SkyRenderableInstanceCloud.cpp \
-	SkyRenderableInstanceGroup.cpp \
-	SkyCloud.cpp  \
-	SkyArchive.cpp \
-	SkyUtil.cpp \
-	SkyContext.cpp \
-	SkySceneManager.cpp \
-	SkySceneLoader.cpp
+	vec3fv.cpp vec3fv.hpp vec3f.hpp vec4f.hpp vec2f.hpp \
+	mat16fv.cpp mat16fv.hpp \
+	mat33.hpp mat33impl.hpp \
+	mat44.hpp mat44impl.hpp \
+	tri.cpp tri.hpp \
+	plane.cpp plane.hpp \
+	camera.cpp camera.hpp \
+	camutils.cpp camutils.hpp \
+	minmaxbox.cpp minmaxbox.hpp \
+	SkyAABBTree.hpp \
+	SkyArchive.cpp SkyArchive.hpp \
+	SkyBoundingVolume.hpp \
+	SkyBVTree.hpp SkyBVTreeSplitter.hpp \
+	SkyCloud.cpp SkyCloud.hpp \
+	SkyCloudParticle.hpp \
+	SkyContext.cpp SkyContext.hpp \
+	SkyDynamicTextureManager.cpp SkyDynamicTextureManager.hpp \
+	SkyLight.cpp SkyLight.hpp \
+	SkyMaterial.cpp SkyMaterial.hpp \
+	SkyMinMaxBox.cpp SkyMinMaxBox.hpp \
+	SkyRenderable.hpp \
+	SkyRenderableInstance.hpp \
+	SkyRenderableInstanceCloud.cpp SkyRenderableInstanceCloud.hpp \
+	SkyRenderableInstanceGeneric.hpp \
+	SkyRenderableInstanceGroup.cpp SkyRenderableInstanceGroup.hpp \
+	SkySceneLoader.cpp \
+	SkySceneManager.cpp SkySceneManager.hpp \
+	SkySingleton.hpp \
+	SkyTexture.hpp \
+	SkyTextureManager.cpp SkyTextureManager.hpp \
+	SkyTextureState.cpp SkyTextureState.hpp \
+	SkyUtil.cpp
 
 INCLUDES = -I$(top_srcdir)
