--- a/simgear/io/Makefile.am
+++ b/simgear/io/Makefile.am
@@ -22,12 +22,6 @@ libsgio_a_SOURCES = \
 
 INCLUDES = -I$(top_srcdir)
 
-if IS_MINGW
-NETWORK_LIB = -lwsock32
-else
-NETWORK_LIB =
-endif
-
 noinst_PROGRAMS = decode_binobj socktest lowtest tcp_server tcp_client
 
 tcp_server_SOURCES = tcp_server.cxx
@@ -38,7 +32,7 @@ tcp_server_LDADD = \
 	$(top_builddir)/simgear/bucket/libsgbucket.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
 	$(top_builddir)/simgear/xml/libsgxml.a \
-	-lplibnet -lplibul -lz $(NETWORK_LIB)
+	-lplibnet -lplibul -lz
 
 tcp_client_SOURCES = tcp_client.cxx
 
@@ -48,7 +42,7 @@ tcp_client_LDADD = \
 	$(top_builddir)/simgear/bucket/libsgbucket.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
         $(top_builddir)/simgear/xml/libsgxml.a \
-	-lplibnet -lplibul -lz $(NETWORK_LIB)
+	-lplibnet -lplibul -lz
 
 socktest_SOURCES = socktest.cxx
 
@@ -58,7 +52,7 @@ socktest_LDADD = \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
 	$(top_builddir)/simgear/xml/libsgxml.a \
-	-lplibnet -lplibul -lz $(NETWORK_LIB)
+	-lplibnet -lplibul -lz
 
 lowtest_SOURCES = lowtest.cxx
 
