--- a/simgear/screen/Makefile.am
+++ b/simgear/screen/Makefile.am
@@ -2,6 +2,8 @@ includedir = @includedir@/screen
 
 lib_LIBRARIES = libsgscreen.a
 
+EXTRA_DIST = jpgfactory.cxx jpgfactory.hxx
+
 if ENABLE_JPEG_SERVER
 IMAGE_SERVER_INCL = jpgfactory.hxx
 IMAGE_SERVER_SRCS = jpgfactory.cxx
