Patch from Erik Hofman:
This patch adds some more functionality to the header files and removes
*all* dependencies on SG_HAVE_NATIVE_SGI_COMPILERS in the SimGear code!

[dpm: I had to add some additional SG_USING_STD declarations to make
it compile]

--- a/simgear/compatibility/Makefile.am
+++ b/simgear/compatibility/Makefile.am
@@ -27,3 +27,32 @@ include_HEADERS	= \
 	ctime \
 	iomanip \
 	streambuf
+includedir = @includedir@/compatibility
+
+EXTRA_DIST = README
+
+include_HEADERS	= \
+	cfloat \
+	csetjmp \
+	cstdio \
+	cwchar \
+	iostream \
+	strstream \
+	cassert \
+	climits \
+	csignal \
+	cstdlib \
+	cwctype \
+	istream \
+	cctype \
+	clocale \
+	cstdarg \
+	cstring \
+	fstream \
+	iterator \
+	cerrno \
+	cmath \
+	cstddef \
+	ctime \
+	iomanip \
+	streambuf
