--- a/simgear/misc/Makefile.am
+++ b/simgear/misc/Makefile.am
@@ -11,6 +11,7 @@ include_HEADERS = \
 	sgstream.hxx \
 	stopwatch.hxx \
 	strutils.hxx \
+	tabbed_values.hxx \
 	texcoord.hxx \
 	zfstream.hxx
 
@@ -22,12 +23,16 @@ libsgmisc_a_SOURCES = \
 	sg_path.cxx \
 	sgstream.cxx \
 	strutils.cxx \
+	tabbed_values.cxx \
 	texcoord.cxx \
 	zfstream.cxx
 
-noinst_PROGRAMS = props_test
+noinst_PROGRAMS = props_test tabbed_value_test
 
 props_test_SOURCES = props_test.cxx
 props_test_LDADD = libsgmisc.a ../xml/libsgxml.a ../debug/libsgdebug.a
+
+tabbed_value_test_SOURCES = tabbed_values_test.cxx
+tabbed_value_test_LDADD = libsgmisc.a ../debug/libsgdebug.a
 
 INCLUDES = -I$(top_srcdir)
