--- a/configure.ac
+++ b/configure.ac
@@ -420,6 +420,7 @@ AC_CONFIG_FILES([ \
 	simgear/serial/Makefile \
 	simgear/sky/Makefile \
 	simgear/sky/clouds3d/Makefile \
+	simgear/sky/sunsky/Makefile \
 	simgear/threads/Makefile \
 	simgear/timing/Makefile \
 	simgear/xgl/Makefile \
