--- a/simgear/Makefile.am
+++ b/simgear/Makefile.am
@@ -10,7 +10,7 @@ METAR_DIRS = metar
 EXTRA_DIST = simgear_config.h.vc5 version.h.in
 
 include_HEADERS = \
-	compiler.h constants.h sg_inlines.h sg_traits.hxx sg_zlib.h version.h
+	compiler.h constants.h sg_inlines.h sg_traits.hxx version.h
 
 SUBDIRS = \
 	compatibility \
