Move the texture object to the screen directory for the sake of library dependencies

--- a/simgear/screen/Makefile.am
+++ b/simgear/screen/Makefile.am
@@ -12,9 +12,14 @@ IMAGE_SERVER_INCL =
 IMAGE_SERVER_SRCS = 
 endif
 
-include_HEADERS = $(IMAGE_SERVER_INCL) screen-dump.hxx tr.h
+include_HEADERS = \
+	texture.hxx \
+	$(IMAGE_SERVER_INCL) \
+	screen-dump.hxx \
+	tr.h
 
 libsgscreen_a_SOURCES = \
+	texture.cxx \
 	GLBitmaps.cxx GLBitmaps.h \
 	$(IMAGE_SERVER_SRCS) \
 	screen-dump.cxx \
