- Moved some property specific code into simgear/props/ - Split out the condition code from fgfs/src/Main/fg_props and put it   in it's own source file in simgear/props/ - Created a scene subdirectory for scenery, model, and material property   related code. - Moved location.[ch]xx into simgear/scene/model/ - The location and condition code had dependencies on flightgear's global   state (all the globals-> stuff, the flightgear property tree, etc.)  SimGear   code can't depend on it so that data has to be passed as parameters to the   functions/methods/constructors.

--- a/configure.ac
+++ b/configure.ac
@@ -415,7 +415,10 @@ AC_CONFIG_FILES([ \
 	simgear/math/Makefile \
 	simgear/metar/Makefile \
 	simgear/misc/Makefile \
+	simgear/props/Makefile \
 	simgear/route/Makefile \
+	simgear/scene/Makefile \
+	simgear/scene/model/Makefile \
 	simgear/screen/Makefile \
 	simgear/serial/Makefile \
 	simgear/sky/Makefile \
