--- a/simgear/misc/Makefile.am
+++ b/simgear/misc/Makefile.am
@@ -5,8 +5,6 @@ lib_LIBRARIES = libsgmisc.a
 include_HEADERS = \
         commands.hxx \
         exception.hxx \
-	props.hxx \
-	props_io.hxx \
 	sg_path.hxx \
 	sgstream.hxx \
 	stopwatch.hxx \
@@ -18,8 +16,6 @@ include_HEADERS = \
 libsgmisc_a_SOURCES = \
         commands.cxx \
         exception.cxx \
-	props.cxx \
-        props_io.cxx \
 	sg_path.cxx \
 	sgstream.cxx \
 	strutils.cxx \
@@ -27,12 +23,12 @@ libsgmisc_a_SOURCES = \
 	texcoord.cxx \
 	zfstream.cxx
 
-noinst_PROGRAMS = props_test tabbed_value_test
-
-props_test_SOURCES = props_test.cxx
-props_test_LDADD = libsgmisc.a ../xml/libsgxml.a ../debug/libsgdebug.a
+noinst_PROGRAMS = tabbed_value_test
 
 tabbed_value_test_SOURCES = tabbed_values_test.cxx
-tabbed_value_test_LDADD = libsgmisc.a ../xml/libsgxml.a ../debug/libsgdebug.a
+tabbed_value_test_LDADD = \
+	$(top_builddir)/simgear/misc/libsgmisc.a \
+	$(top_builddir)/simgear/xml/libsgxml.a \
+	$(top_builddir)/simgear/debug/libsgdebug.a
 
 INCLUDES = -I$(top_srcdir)
