Moved loader.[ch]xx and model.[ch]xx from fgfs/src/Model/ to simgear/scene/model.

--- a/simgear/scene/model/Makefile.am
+++ b/simgear/scene/model/Makefile.am
@@ -4,8 +4,18 @@ lib_LIBRARIES = libsgmodel.a
 
 noinst_HEADERS =
 
-include_HEADERS = animation.hxx location.hxx placement.hxx
+include_HEADERS = \
+	animation.hxx \
+	loader.hxx \
+	location.hxx \
+	model.hxx \
+	placement.hxx
 
-libsgmodel_a_SOURCES = animation.cxx location.cxx placement.cxx
+libsgmodel_a_SOURCES = \
+	animation.cxx \
+	loader.cxx \
+	location.cxx \
+	model.cxx \
+	placement.cxx
 
 INCLUDES = -I$(top_srcdir)
