Moved fgfs_src/Object/newmat.[ch]xx and fgfs_src/Object/matlib.[ch]xx into simgear/scene/material/

--- a/configure.ac
+++ b/configure.ac
@@ -418,6 +418,7 @@ AC_CONFIG_FILES([ \
 	simgear/props/Makefile \
 	simgear/route/Makefile \
 	simgear/scene/Makefile \
+	simgear/scene/material/Makefile \
 	simgear/scene/model/Makefile \
 	simgear/screen/Makefile \
 	simgear/serial/Makefile \
