Separate out the SGMaterial::Object{,Group} code into it's own source file.

--- a/simgear/scene/material/Makefile.am
+++ b/simgear/scene/material/Makefile.am
@@ -6,10 +6,12 @@ noinst_HEADERS =
 
 include_HEADERS = \
 	mat.hxx \
-	matlib.hxx
+	matlib.hxx \
+	matobj.hxx
 
 libsgmaterial_a_SOURCES = \
 	mat.cxx \
-	matlib.cxx
+	matlib.cxx \
+	matobj.cxx
 
 INCLUDES = -I$(top_srcdir)
