--- a/simgear/scene/model/Makefile.am
+++ b/simgear/scene/model/Makefile.am
@@ -6,16 +6,16 @@ noinst_HEADERS =
 
 include_HEADERS = \
 	animation.hxx \
-	loader.hxx \
 	location.hxx \
 	model.hxx \
+	modellib.hxx \
 	placement.hxx
 
 libsgmodel_a_SOURCES = \
 	animation.cxx \
-	loader.cxx \
 	location.cxx \
 	model.cxx \
+	modellib.cxx \
 	placement.cxx
 
 INCLUDES = -I$(top_srcdir)
