Moved random ground cover object management code over to simgear.

--- a/simgear/scene/tgdb/Makefile.am
+++ b/simgear/scene/tgdb/Makefile.am
@@ -7,11 +7,13 @@ noinst_HEADERS =
 include_HEADERS = \
 	apt_signs.hxx \
 	leaf.hxx \
-	pt_lights.hxx
+	pt_lights.hxx \
+	userdata.hxx
 
 libsgtgdb_a_SOURCES = \
 	apt_signs.cxx \
 	leaf.cxx \
-	pt_lights.cxx
+	pt_lights.cxx \
+	userdata.cxx
 
 INCLUDES = -I$(top_srcdir)
