Moved low level "tg" format object loader code over to SimGear.

--- a/simgear/scene/tgdb/Makefile.am
+++ b/simgear/scene/tgdb/Makefile.am
@@ -7,12 +7,14 @@ noinst_HEADERS =
 include_HEADERS = \
 	apt_signs.hxx \
 	leaf.hxx \
+	obj.hxx \
 	pt_lights.hxx \
 	userdata.hxx
 
 libsgtgdb_a_SOURCES = \
 	apt_signs.cxx \
 	leaf.cxx \
+	obj.cxx \
 	pt_lights.cxx \
 	userdata.cxx
 
