Move simgear/sky/ -> simgear/scene/sky/ as part of the consolidation of graphics code.

--- a/simgear/scene/Makefile.am
+++ b/simgear/scene/Makefile.am
@@ -1,6 +1,6 @@
 includedir = @includedir@/scene
 
-SUBDIRS = material model tgdb
+SUBDIRS = material model sky tgdb
 
 # lib_LIBRARIES = libsgscene.a
 
